@@ -16,3 +16,4 @@ along with pyscard; if not, write to the Free Software Foundation, Inc.,
 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 
 .. literalinclude:: ../../../LICENSE
+    :language: text
